<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_information"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/lollipop_green"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_below="@+id/top"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Map_Information"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/red_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                android:background="@drawable/ic_intimate_range"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Intimate_Range"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/orange_information"
            android:layout_below="@+id/red_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                android:background="@drawable/ic_personal_range"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Personal_Range"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/yellow_information"
            android:layout_below="@+id/orange_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                android:background="@drawable/ic_social_range"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Social_Range"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/green_information"
            android:layout_below="@+id/yellow_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                android:background="@drawable/ic_public_range"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Public_Range"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/green_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                android:background="@drawable/ic_sensing_range"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/Sensing_Range"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_gravity="center"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_information"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/top_bar_image" />

</RelativeLayout>
